--- a/view/layout.html
+++ b/view/layout.html
@@ -4,7 +4,7 @@
 
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
-  <title>PHPCUBE - 釋放你的超級力量</title>
+  <title>PHPCUBE - Release Your Super Power</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
@@ -53,6 +53,7 @@
     <div class="container">
       <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
         <div class="social-icons">
+          {% if 0 %}
           <span><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="#"><i class="fa fa-facebook"></i></a></span>
           <span><a data-toggle="tooltip" data-placement="bottom" title="Google Plus" href="#"><i class="fa fa-google-plus"></i></a></span>
           <span><a data-toggle="tooltip" data-placement="bottom" title="Twitter" href="#"><i class="fa fa-twitter"></i></a></span>
@@ -60,6 +61,8 @@
           <span><a data-toggle="tooltip" data-placement="bottom" title="Linkedin" href="#"><i class="fa fa-linkedin"></i></a></span>
           <span><a data-toggle="tooltip" data-placement="bottom" title="Dribbble" href="#"><i class="fa fa-dribbble"></i></a></span>
           <span class="last"><a data-toggle="tooltip" data-placement="bottom" title="Skype" href="#"><i class="fa fa-skype"></i></a></span>
+          {% endif %}
+          <span class="last"><a data-toggle="tooltip" data-placement="bottom" title="Facebook" href="#"><i class="fa fa-facebook"></i></a></span>
         </div><!-- end social icons -->
       </div><!-- end columns -->
       <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
@@ -95,6 +98,7 @@
             <li><a href="contact.html">探索</a></li>
             <li><a href="contact.html">框架</a></li>
             <li><a href="contact.html">軟體</a></li>
+            <li><a href="contact.html">發問</a></li>
           </ul><!-- end navbar-nav -->
         </div><!-- #navbar-collapse-1 -->
       </nav><!-- end navbar yamm navbar-default -->
@@ -105,10 +109,13 @@
   <section class="white-wrapper">
     <div class="container">
       <div class="messagebox">
-        <h2>PHPCube, <mark>Powerful Theme</mark> With Endless Possibilties</h2>
-        <p class="lead">Hey Everyone! We are Jollyany and we make really beautiful and amazing stuff. This can be used to describe what you do,<br>
-    how you do it, & who you do it for. Don’t Miss the Awesome Theme</p>
-        <a class="btn btn-primary btn-lg" href="#">Purchase Now</a> <a class="btn btn-dark btn-lg" href="#">Tell Me More!</a>
+        <h2>PHPCUBE，燃起你的 <mark>PHP 魂</mark></h2>
+        <p class="lead">
+          成為 PHP 生態圈裡的一塊基石是我們努力追求的目標和遠景。<br />
+          無論您想如何使用 PHP，希望我們都能帶來或多或少的幫助。共勉之。<br />
+        </p>
+        <a class="btn btn-primary btn-lg" href="#">探索學習</a>&nbsp;
+        <a class="btn btn-success btn-lg" href="#">我要發問</a>
       </div><!-- end messagebox -->
     </div><!-- end container -->
   </section><!-- end white-wrapper -->
@@ -192,7 +199,7 @@
     <div class="overlay">
       <div class="container">
         <div class="general-title">
-          <h2>開發框架</h2>
+          <h2>框架開發</h2>
           <hr />
           <p class="lead">強化你的程式架構和撰寫規格</p>
         </div><!-- end general title -->
@@ -209,6 +216,18 @@
           </div>
           <div class="client-wrap col-lg-3 last">
             <a href="#" title=""><img src="demos/cube/ci-bw.png" alt=""></a>
+          </div>
+          <div class="client-wrap col-lg-3 first no-border">
+            <a href="#" title=""><img src="demos/cube/zend-bw.png" alt=""></a>
+          </div>
+          <div class="client-wrap col-lg-3 no-border">
+            <a href="#" title=""><img src="demos/cube/phalcon-bw.png" alt=""></a>
+          </div>
+          <div class="client-wrap col-lg-3 no-border">
+            <a href="#" title=""><img src="demos/cube/slim-bw.png" alt=""></a>
+          </div>
+          <div class="client-wrap col-lg-3 last no-border">
+            <a href="#" title=""><img src="demos/cube/cakephp-bw.png" alt=""></a>
           </div>
         </div><!-- end row -->
       </div><!-- end container -->
@@ -331,6 +350,7 @@
     </div><!-- end container -->
   </section><!-- end white-wrapper -->
 
+  {% if 0 %}
   <footer id="footer-style-1">
     <div class="container">
       <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -389,6 +409,7 @@
       </div><!-- end columns -->
     </div><!-- end container -->
   </footer><!-- end #footer-style-1 -->
+  {% endif %}
 
   <div id="copyrights">
     <div class="container">
