新增學習簡介文案

--- a/view/layout.html
+++ b/view/layout.html
@@ -134,8 +134,8 @@
             <div class="service-icon">
               <i class="fa fa-lightbulb-o fa-4x"></i>
             </div>
-            <h3>Aweosme Design Layout</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+            <h3>瞭解什麼是網站，何謂 PHP</h3>
+            <p>帶你瞭解伺服器、瀏覽器、主機等技術概說，並介紹 PHP 在其中所扮演的角色，以及如何搭建一個簡易開發環境。</p>
             <a href="#" class="readmore">Read More...</a>
           </div><!-- end service_vertical_box -->
         </div><!-- end col-lg-4 -->
@@ -144,8 +144,8 @@
             <div class="service-icon">
               <i class="fa fa-gear fa-4x"></i>
             </div>
-            <h3>Drag and Drop Builder</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+            <h3>PHP 程式語言入門</h3>
+            <p>變數、運算、函式、邏輯、迴圈…介紹 PHP 語言各種的基本部件，只要瞭解，就能輕鬆掌握一半以上的開發能力。</p>
             <a href="#" class="readmore">Read More...</a>
           </div><!-- end service_vertical_box -->
         </div><!-- end col-lg-4 -->
@@ -154,8 +154,8 @@
             <div class="service-icon">
               <i class="fa fa-tablet fa-4x"></i>
             </div>
-            <h3>Retina Ready Display</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+            <h3>HTML 語言入門</h3>
+            <p>概略介紹常用的 HTML 標籤，並將它和 PHP 一起結合使用。</p>
             <a href="#" class="readmore">Read More...</a>
           </div><!-- end service_vertical_box -->
         </div><!-- end col-lg-4 -->
@@ -164,28 +164,28 @@
             <div class="service-icon">
               <i class="fa fa-folder-o fa-4x"></i>
             </div>
-            <h3>Next-level features</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+            <h3>資料的進入、儲存與使用</h3>
+            <p>介紹可能的資料類型和儲存方式，並說明如何經由 HTML 和 PHP 做到資料的儲存和應用。</p>
             <a href="#" class="readmore">Read More...</a>
           </div><!-- end service_vertical_box -->
         </div><!-- end col-lg-4 -->
         <div class="col-lg-4">
           <div class="service_vertical_box">
             <div class="service-icon">
-              <i class="fa fa-google-plus fa-4x"></i>
+              <i class="fa fa-puzzle-piece fa-4x"></i>
             </div>
-            <h3>Social Media Friendly</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+            <h3>物件導向的世界</h3>
+            <p>是時候該邁入中階了。物件導向在現今程式語言中扮演著極其核心的角色，一同來瞭解什麼是介面、物件、繼承吧。</p>
             <a href="#" class="readmore">Read More...</a>
           </div><!-- end service_vertical_box -->
         </div><!-- end col-lg-4 -->
         <div class="col-lg-4 last">
           <div class="service_vertical_box">
             <div class="service-icon">
-              <i class="fa fa-bars fa-4x"></i>
+              <i class="fa fa-rocket fa-4x"></i>
             </div>
-            <h3>Responsive Web Design</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur euismod enim a metus adipiscing aliquam. </p>
+            <h3>設計模式</h3>
+            <p>設計模式是一套被整理出來解決特定目的的程式公式。當踏入了設計模式，你才能真正瞭解物件導向的價值所在。</p>
             <a href="#" class="readmore">Read More...</a>
           </div><!-- end service_vertical_box -->
         </div><!-- end col-lg-4 -->
