--- a/view/layout.html
+++ b/view/layout.html
@@ -201,7 +201,7 @@
         <div class="general-title">
           <h2>框架開發</h2>
           <hr />
-          <p class="lead">強化你的程式架構和撰寫規格</p>
+          <p class="lead">強化你的思維架構和程式規格</p>
         </div><!-- end general title -->
         
         <div class="clients padding-top text-center">
